# wordsapi

./: Cargo.toml  README.md
src/: antonyms.rs  client.rs  error.rs  lib.rs  request.rs  response.rs  synonyms.rs  word.rs
