[package]
name = "wordsapi"
version = "0.6.0"
authors = ["Pohl Longsine <pohl.longsine@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.25"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
log = "0.4.17"

